--- a/index.html
+++ b/index.html
@@ -193,6 +193,75 @@
         </section>
         <!-- .mainVisual;; -->
 
+        <!-- .promotion;; -->
+        <section class="promotion">
+          <div class="container">
+            <div class="head">
+              <h2>special summer sale with epicgames</h2>
+              <p>save up to 87%</p>
+            </div>
+            <div class="promotionSlider">
+              <div class="content">
+                <figure><img src="./img/strategy/xcom2_tile_L_1.jpg" alt="" /></figure>
+
+                <div class="txt">
+                  <strong>game name</strong>
+                  <div class="price">
+                    <p>87%</p>
+                    <p>100,000</p>
+                    <p>13,000</p>
+                  </div>
+                </div>
+              </div>
+              <div class="content">
+                <figure><img src="./img/strategy/civilization6_tile_L_1.jpg" alt="" /></figure>
+                <div class="txt">
+                  <strong>game name</strong>
+                  <div class="price">
+                    <p>87%</p>
+                    <p>100,000</p>
+                    <p>13,000</p>
+                  </div>
+                </div>
+              </div>
+              <div class="content">
+                <figure><img src="./img/shooter/borderlands-thc_tile_L_1.jpg" alt="" /></figure>
+                <div class="txt">
+                  <strong>game name</strong>
+                  <div class="price">
+                    <p>87%</p>
+                    <p>100,000</p>
+                    <p>13,000</p>
+                  </div>
+                </div>
+              </div>
+              <div class="content">
+                <figure><img src="./img/shooter/mafia3_tile_L_1.jpg" alt="" /></figure>
+                <div class="txt">
+                  <strong>game name</strong>
+                  <div class="price">
+                    <p>87%</p>
+                    <p>100,000</p>
+                    <p>13,000</p>
+                  </div>
+                </div>
+              </div>
+              <div class="content">
+                <figure><img src="./img/shooter/61413d6e56cbeTTWL_std_keyart_600x600.jpg" alt="" /></figure>
+                <div class="txt">
+                  <strong>game name</strong>
+                  <div class="price">
+                    <p>87%</p>
+                    <p>100,000</p>
+                    <p>13,000</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- .promotion;; -->
+
         <!-- .category;; -->
         <section class="category">
           <div class="container">
@@ -425,31 +494,31 @@
                   <ul class="left">
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/5ca4237bd23b0BL3_2K_GAMES_INDEX_600x600.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/civilization6-gs_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/5f1a1081defdetile_m1_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/civilization5_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/61413d6e56cbeTTWL_std_keyart_600x600.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/civilization5-gk_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/battleborn_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/civilization5-bnw_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/bioshock-infinite_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/civilization4_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -459,31 +528,31 @@
                   <ul class="center">
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/bioshock-infinite_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/civilization4-warlords_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/bioshock2_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/civilization4-colon_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/borderlands-thc_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/civilization4-beyond_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/borderlands-tps_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/civilization3_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/borderlands1_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/civilization-bert_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -493,31 +562,31 @@
                   <ul class="right">
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/darkness2_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/xcom2-woc_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/darkness_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/xcom2_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/dukenukemforever_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/xcom-ew_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/mafia2_tile_T_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/xcom-eu_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/mafia3_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/thebereau_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -529,11 +598,11 @@
         </section>
         <!-- .category;; -->
 
-        <!-- .c02;; -->
-        <section class="c02">
+        <!-- .promotion;; -->
+        <section class="promotion">
           <div class="container"></div>
         </section>
-        <!-- .c02;; -->
+        <!-- .promotion;; -->
 
         <!-- .c03;; -->
         <section class="c03">
