--- a/index.html
+++ b/index.html
@@ -197,8 +197,13 @@
         <section class="promotion">
           <div class="container">
             <div class="head">
-              <h2>special summer sale with epicgames</h2>
-              <p>save up to 87%</p>
+              <p class="sale">MAX 87% off!</p>
+              <h2>
+                <p>summer sale</p>
+                <a href="">
+                  <figure><img src="./img/epic_logo.png" alt="" /></figure>
+                </a>
+              </h2>
             </div>
             <div class="promotionSlider">
               <div class="content">
@@ -209,7 +214,7 @@
                   <div class="price">
                     <p>87%</p>
                     <p>100,000</p>
-                    <p>13,000</p>
+                    <p>13,000원</p>
                   </div>
                 </div>
               </div>
@@ -277,7 +282,7 @@
               </div>
             </div>
             <ul class="shooterGames on genre">
-              <div class="gameList">
+              <ul class="gameList">
                 <li>
                   <ul class="left">
                     <li>
@@ -301,6 +306,12 @@
                     <li>
                       <a href="#!">
                         <figure><img src="./img/shooter/battleborn_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/bioshock-infinite_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -378,41 +389,53 @@
                         <p>Borderlands</p>
                       </a>
                     </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/mafia3_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
                   </ul>
                 </li>
-              </div>
+              </ul>
             </ul>
             <ul class="sportsGames genre">
-              <div class="gameList">
+              <ul class="gameList">
                 <li>
                   <ul class="left">
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/5ca4237bd23b0BL3_2K_GAMES_INDEX_600x600.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/nba2k20_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/5f1a1081defdetile_m1_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/nba2kplaygrd2_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/61413d6e56cbeTTWL_std_keyart_600x600.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/nba2k19_gamesindex_thm.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/battleborn_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/nba2k20_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/bioshock-infinite_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/nba2k19_gamesindex_thm.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/sports/wwe2k_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -422,31 +445,31 @@
                   <ul class="center">
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/bioshock-infinite_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/nba2k18_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/bioshock2_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/nba2k17_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/borderlands-thc_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/tgc19_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/borderlands-tps_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/61e8b2dfa42856tyh83qq_pi3vbn_w22_tile_keyart_600x600.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/borderlands1_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/615ce4a942b97NBA_SuperCard_tile_600x600_noLogo.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -456,40 +479,46 @@
                   <ul class="right">
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/darkness2_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/61524453bcea6NBA_2KMobile_tile.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/darkness_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/6137b090f0020tile_nba2k22-luka_1_t74bbv9022f.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/dukenukemforever_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/5f08a9d94c36atile_wweBG_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/mafia2_tile_T_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/5efde643015e5nba2k21_mamba_ng_tile.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/mafia3_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/sports/5ebd475c0d32ftile_pga21_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/sports/wwe2k20_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
                   </ul>
                 </li>
-              </div>
+              </ul>
             </ul>
             <ul class="strategyGames genre">
-              <div class="gameList">
+              <ul class="gameList">
                 <li>
                   <ul class="left">
                     <li>
@@ -513,6 +542,12 @@
                     <li>
                       <a href="#!">
                         <figure><img src="./img/strategy/civilization5-bnw_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/strategy/civilization4_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -590,9 +625,15 @@
                         <p>Borderlands</p>
                       </a>
                     </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/strategy/thebereau_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
                   </ul>
                 </li>
-              </div>
+              </ul>
             </ul>
           </div>
         </section>
