--- a/index.html
+++ b/index.html
@@ -206,62 +206,71 @@
               </h2>
             </div>
             <div class="promotionSlider">
-              <div class="content">
-                <figure><img src="./img/strategy/xcom2_tile_L_1.jpg" alt="" /></figure>
-
-                <div class="txt">
-                  <strong>game name</strong>
-                  <div class="price">
-                    <p>87%</p>
-                    <p>100,000</p>
-                    <p>13,000원</p>
+              <a href="">
+                <div class="content">
+                  <figure><img src="./img/strategy/xcom2_tile_L_1.jpg" alt="" /></figure>
+                  <div class="txt">
+                    <span>game name</span>
+                    <div class="price">
+                      <p>87%</p>
+                      <p>100,000</p>
+                      <p>13,000원</p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="content">
-                <figure><img src="./img/strategy/civilization6_tile_L_1.jpg" alt="" /></figure>
-                <div class="txt">
-                  <strong>game name</strong>
-                  <div class="price">
-                    <p>87%</p>
-                    <p>100,000</p>
-                    <p>13,000</p>
+              </a>
+              <a href="">
+                <div class="content">
+                  <figure><img src="./img/strategy/civilization6_tile_L_1.jpg" alt="" /></figure>
+                  <div class="txt">
+                    <span>game name</span>
+                    <div class="price">
+                      <p>70%</p>
+                      <p>100,000</p>
+                      <p>30,000원</p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="content">
-                <figure><img src="./img/shooter/borderlands-thc_tile_L_1.jpg" alt="" /></figure>
-                <div class="txt">
-                  <strong>game name</strong>
-                  <div class="price">
-                    <p>87%</p>
-                    <p>100,000</p>
-                    <p>13,000</p>
+              </a>
+              <a href="">
+                <div class="content">
+                  <figure><img src="./img/shooter/borderlands-thc_tile_L_1.jpg" alt="" /></figure>
+                  <div class="txt">
+                    <span>game name</span>
+                    <div class="price">
+                      <p>65%</p>
+                      <p>100,000</p>
+                      <p>35,000원</p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="content">
-                <figure><img src="./img/shooter/mafia3_tile_L_1.jpg" alt="" /></figure>
-                <div class="txt">
-                  <strong>game name</strong>
-                  <div class="price">
-                    <p>87%</p>
-                    <p>100,000</p>
-                    <p>13,000</p>
+              </a>
+              <a href="">
+                <div class="content">
+                  <figure><img src="./img/shooter/mafia3_tile_L_1.jpg" alt="" /></figure>
+                  <div class="txt">
+                    <span>game name</span>
+                    <div class="price">
+                      <p>80%</p>
+                      <p>100,000</p>
+                      <p>20,000원</p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="content">
-                <figure><img src="./img/shooter/61413d6e56cbeTTWL_std_keyart_600x600.jpg" alt="" /></figure>
-                <div class="txt">
-                  <strong>game name</strong>
-                  <div class="price">
-                    <p>87%</p>
-                    <p>100,000</p>
-                    <p>13,000</p>
+              </a>
+              <a href="">
+                <div class="content">
+                  <figure><img src="./img/shooter/61413d6e56cbeTTWL_std_keyart_600x600.jpg" alt="" /></figure>
+                  <div class="txt">
+                    <span>game name</span>
+                    <div class="price">
+                      <p>85%</p>
+                      <p>100,000</p>
+                      <p>15,000</p>
+                    </div>
                   </div>
                 </div>
-              </div>
+              </a>
             </div>
           </div>
         </section>
@@ -317,7 +326,7 @@
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/bioshock-infinite_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/shooter/mafia2_tile_T_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -391,7 +400,7 @@
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/mafia3_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/shooter/specops_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -553,7 +562,7 @@
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/strategy/civilization4_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/civilization4-warlords_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -627,7 +636,7 @@
                     </li>
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/strategy/thebereau_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/strategy/civilization6-rf_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
