--- a/index.html
+++ b/index.html
@@ -20,13 +20,7 @@
           <h1>
             <a href="#!"><img src="./img/2K_logo__1_.png" alt="" /></a>
           </h1>
-          <ul class="menu">
-            <li><a href="">menu01</a></li>
-            <li><a href="">menu02</a></li>
-            <li><a href="">menu03</a></li>
-            <li><a href="">menu04</a></li>
-            <li><a href="">menu05</a></li>
-          </ul>
+
           <a href="" class="burger"><i class="xi-bars"></i></a>
         </nav>
       </header>
@@ -63,6 +57,10 @@
                 <div class="closeBtn">
                   <i class="xi-close"></i>
                 </div>
+                <div class="infoSlideBtn">
+                  <div class="prev"></div>
+                  <div class="next"></div>
+                </div>
                 <iframe
                   width="1264"
                   height="711"
@@ -94,6 +92,10 @@
               <div class="info tinyInfo">
                 <div class="closeBtn">
                   <i class="xi-close"></i>
+                </div>
+                <div class="infoSlideBtn">
+                  <div class="prev"></div>
+                  <div class="next"></div>
                 </div>
                 <iframe
                   width="1264"
@@ -128,6 +130,10 @@
                 <div class="closeBtn">
                   <i class="xi-close"></i>
                 </div>
+                <div class="infoSlideBtn">
+                  <div class="prev"></div>
+                  <div class="next"></div>
+                </div>
                 <iframe
                   width="1264"
                   height="711"
@@ -159,6 +165,10 @@
               <div class="info wweInfo">
                 <div class="closeBtn">
                   <i class="xi-close"></i>
+                </div>
+                <div class="infoSlideBtn">
+                  <div class="prev"></div>
+                  <div class="next"></div>
                 </div>
                 <iframe
                   width="1264"
@@ -210,7 +220,7 @@
                 <div class="content">
                   <figure><img src="./img/strategy/xcom2_tile_L_1.jpg" alt="" /></figure>
                   <div class="txt">
-                    <span>game name</span>
+                    <span>XCOM</span>
                     <div class="price">
                       <p>87%</p>
                       <p>100,000</p>
@@ -223,7 +233,7 @@
                 <div class="content">
                   <figure><img src="./img/strategy/civilization6_tile_L_1.jpg" alt="" /></figure>
                   <div class="txt">
-                    <span>game name</span>
+                    <span>CIVILIZATION VI</span>
                     <div class="price">
                       <p>70%</p>
                       <p>100,000</p>
@@ -236,7 +246,7 @@
                 <div class="content">
                   <figure><img src="./img/shooter/borderlands-thc_tile_L_1.jpg" alt="" /></figure>
                   <div class="txt">
-                    <span>game name</span>
+                    <span>BORDERLANDS3</span>
                     <div class="price">
                       <p>65%</p>
                       <p>100,000</p>
@@ -249,7 +259,7 @@
                 <div class="content">
                   <figure><img src="./img/shooter/mafia3_tile_L_1.jpg" alt="" /></figure>
                   <div class="txt">
-                    <span>game name</span>
+                    <span>MAFIA III</span>
                     <div class="price">
                       <p>80%</p>
                       <p>100,000</p>
@@ -262,7 +272,7 @@
                 <div class="content">
                   <figure><img src="./img/shooter/61413d6e56cbeTTWL_std_keyart_600x600.jpg" alt="" /></figure>
                   <div class="txt">
-                    <span>game name</span>
+                    <span>TINY TINA'S WONDERLANDS</span>
                     <div class="price">
                       <p>85%</p>
                       <p>100,000</p>
