--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <!-- .mainVisual;; -->
         <section class="mainVisual">
           <div class="infoWrap"></div>
+          <div class="mainArrow">
+            <div class="prev">prev</div>
+            <div class="next">next</div>
+          </div>
           <div class="mainSlider">
             <div class="slider">
               <div class="mainBg quarry"></div>
