--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/slick.css" />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/main.js"></script>
@@ -662,12 +663,6 @@
         </section>
         <!-- .category;; -->
 
-        <!-- .promotion;; -->
-        <section class="promotion">
-          <div class="container"></div>
-        </section>
-        <!-- .promotion;; -->
-
         <!-- .c03;; -->
         <section class="c03">
           <div class="container"></div>
@@ -690,7 +685,79 @@
 
       <!-- .footer;; -->
       <footer class="footer">
-        <div class="container"></div>
+        <div class="container">
+          <form action="#" name="emailSubmit">
+            <p>Find latest news and promotions!</p>
+            <input name="emailSubmit" type="text" placeholder="Email" />
+            <button class="emailBtn" type="submit"><i class="xi-send"></i></button>
+          </form>
+          <div class="privacy">
+            <dl class="left">
+              <dt>
+                <a href=""> GAMES </a>
+              </dt>
+              <dt>
+                <a href=""> OUR BLOG </a>
+              </dt>
+              <dt>
+                <a href=""> FINDING JOBS </a>
+              </dt>
+            </dl>
+            <ul class="sns">
+              <li>
+                <a href="">
+                  <i class="xi-facebook"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="xi-twitter"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="xi-youtube"></i>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <i class="xi-instagram"></i>
+                </a>
+              </li>
+            </ul>
+            <dl class="right">
+              <dt>
+                <a href=""> NEWSROOM </a>
+              </dt>
+              <dt>
+                <a href=""> ABOUT US </a>
+              </dt>
+              <dt>
+                <a href=""> STORE </a>
+              </dt>
+            </dl>
+          </div>
+          <a href="" class="support">
+            <div class="twitterBox">
+              <strong><i class="xi-twitter"></i>2K Support <span>@2KSupport 29 Apr</span></strong>
+              <p>
+                Hey folks! It can take up to 24 hours for purchased VC to appear in your account. If it's still missing after 24 hours, please open a ticket here: <br />
+                http://2kgam.es/2KHelpMe
+              </p>
+            </div>
+          </a>
+          <div class="priv">
+            <ul>
+              <li><a href="">PRIVACY POLICY</a></li>
+              <li><a href="">TERMS OF SERVICE</a></li>
+              <li><a href="">COOKIE POLICY</a></li>
+              <li><a href="">COOKIE SETTINGS</a></li>
+              <li><a href="">DO NOT SELL MY PERSONAL INFORMATION</a></li>
+              <li><a href="">2K AD PARTNERS</a></li>
+            </ul>
+          </div>
+          <div class="copyright">Copyright ©2017 Take-Two Interactive Software, Inc Trademarks belong to their respective owners. All rights reserved.</div>
+        </div>
       </footer>
       <!-- .footer;; -->
     </div>
