220726 웹접근성수정
8.
Error: Element figure not allowed as child of element a in this context. (Suppressing further errors from this subtree.)

9. ~ 11.
Error: Element ul not allowed as child of element ul in this context. (Suppressing further errors from this subtree.)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
           <h1>
             <a href="#!"><img src="./img/2K_logo__1_.png" alt="" /></a>
           </h1>
-
           <a href="" class="burger"><i class="xi-bars"></i></a>
         </nav>
       </header>
@@ -215,9 +214,11 @@
               <p class="sale">MAX 87% off!</p>
               <h2>
                 <p>summer sale</p>
-                <a href="">
-                  <figure><img src="./img/epic_logo.png" alt="" /></figure>
-                </a>
+                <figure>
+                  <a href="">
+                    <img src="./img/epic_logo.png" alt="" />
+                  </a>
+                </figure>
               </h2>
             </div>
             <div class="promotionSlider">
@@ -305,7 +306,7 @@
                 <p>strategy</p>
               </div>
             </div>
-            <ul class="shooterGames on genre">
+            <div class="shooterGames on genre">
               <ul class="gameList">
                 <li>
                   <ul class="left">
@@ -339,12 +340,6 @@
                         <p>Borderlands</p>
                       </a>
                     </li>
-                    <li>
-                      <a href="#!">
-                        <figure><img src="./img/shooter/mafia2_tile_T_1.jpg" alt="" /></figure>
-                        <p>Borderlands</p>
-                      </a>
-                    </li>
                   </ul>
                 </li>
                 <li>
@@ -370,12 +365,6 @@
                     <li>
                       <a href="#!">
                         <figure><img src="./img/shooter/borderlands-tps_tile_L_1.jpg" alt="" /></figure>
-                        <p>Borderlands</p>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#!">
-                        <figure><img src="./img/shooter/borderlands1_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -413,16 +402,10 @@
                         <p>Borderlands</p>
                       </a>
                     </li>
-                    <li>
-                      <a href="#!">
-                        <figure><img src="./img/shooter/specops_tile_L_1.jpg" alt="" /></figure>
-                        <p>Borderlands</p>
-                      </a>
-                    </li>
                   </ul>
                 </li>
               </ul>
-            </ul>
+            </div>
             <ul class="sportsGames genre">
               <ul class="gameList">
                 <li>
@@ -457,12 +440,6 @@
                         <p>Borderlands</p>
                       </a>
                     </li>
-                    <li>
-                      <a href="#!">
-                        <figure><img src="./img/sports/wwe2k_tile_L_1.jpg" alt="" /></figure>
-                        <p>Borderlands</p>
-                      </a>
-                    </li>
                   </ul>
                 </li>
                 <li>
@@ -488,12 +465,6 @@
                     <li>
                       <a href="#!">
                         <figure><img src="./img/sports/61e8b2dfa42856tyh83qq_pi3vbn_w22_tile_keyart_600x600.jpg" alt="" /></figure>
-                        <p>Borderlands</p>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#!">
-                        <figure><img src="./img/sports/615ce4a942b97NBA_SuperCard_tile_600x600_noLogo.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -528,12 +499,6 @@
                     <li>
                       <a href="#!">
                         <figure><img src="./img/sports/5ebd475c0d32ftile_pga21_L_1.jpg" alt="" /></figure>
-                        <p>Borderlands</p>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#!">
-                        <figure><img src="./img/sports/wwe2k20_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -575,12 +540,6 @@
                         <p>Borderlands</p>
                       </a>
                     </li>
-                    <li>
-                      <a href="#!">
-                        <figure><img src="./img/strategy/civilization4-warlords_tile_L_1.jpg" alt="" /></figure>
-                        <p>Borderlands</p>
-                      </a>
-                    </li>
                   </ul>
                 </li>
                 <li>
@@ -606,12 +565,6 @@
                     <li>
                       <a href="#!">
                         <figure><img src="./img/strategy/civilization3_tile_L_1.jpg" alt="" /></figure>
-                        <p>Borderlands</p>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#!">
-                        <figure><img src="./img/strategy/civilization-bert_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -649,12 +602,6 @@
                         <p>Borderlands</p>
                       </a>
                     </li>
-                    <li>
-                      <a href="#!">
-                        <figure><img src="./img/strategy/civilization6-rf_tile_L_1.jpg" alt="" /></figure>
-                        <p>Borderlands</p>
-                      </a>
-                    </li>
                   </ul>
                 </li>
               </ul>
@@ -687,7 +634,7 @@
       <footer class="footer">
         <div class="container">
           <form action="#" name="emailSubmit">
-            <p>Find latest news and promotions!</p>
+            <p>Get latest news and promotions!</p>
             <input name="emailSubmit" type="text" placeholder="Email" />
             <button class="emailBtn" type="submit"><i class="xi-send"></i></button>
           </form>
