--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
           <div class="container">
             <div class="head">
               <p class="sale">MAX 87% off!</p>
-              <h2>
-                <p>summer sale</p>
+              <div>
+                <h2>summer sale</h2>
                 <figure>
                   <a href="">
                     <img src="./img/epic_logo.png" alt="" />
                   </a>
                 </figure>
-              </h2>
+              </div>
             </div>
             <div class="promotionSlider">
               <a href="">
@@ -406,7 +406,7 @@
                 </li>
               </ul>
             </div>
-            <ul class="sportsGames genre">
+            <div class="sportsGames genre">
               <ul class="gameList">
                 <li>
                   <ul class="left">
@@ -505,7 +505,7 @@
                   </ul>
                 </li>
               </ul>
-            </ul>
+            </div>
             <ul class="strategyGames genre">
               <ul class="gameList">
                 <li>
