220726 figure ul dl 접근성

--- a/index.html
+++ b/index.html
@@ -639,17 +639,17 @@
             <button class="emailBtn" type="submit"><i class="xi-send"></i></button>
           </form>
           <div class="privacy">
-            <dl class="left">
-              <dt>
+            <ul class="left">
+              <li>
                 <a href=""> GAMES </a>
-              </dt>
-              <dt>
+              </li>
+              <li>
                 <a href=""> OUR BLOG </a>
-              </dt>
-              <dt>
+              </li>
+              <li>
                 <a href=""> FINDING JOBS </a>
-              </dt>
-            </dl>
+              </li>
+            </ul>
             <ul class="sns">
               <li>
                 <a href="">
@@ -672,17 +672,17 @@
                 </a>
               </li>
             </ul>
-            <dl class="right">
-              <dt>
+            <ul class="right">
+              <li>
                 <a href=""> NEWSROOM </a>
-              </dt>
-              <dt>
+              </li>
+              <li>
                 <a href=""> ABOUT US </a>
-              </dt>
-              <dt>
+              </li>
+              <li>
                 <a href=""> STORE </a>
-              </dt>
-            </dl>
+              </li>
+            </ul>
           </div>
           <a href="" class="support">
             <div class="twitterBox">
