220726 ul 접근성 수정

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                 </li>
               </ul>
             </div>
-            <ul class="strategyGames genre">
+            <div class="strategyGames genre">
               <ul class="gameList">
                 <li>
                   <ul class="left">
@@ -605,7 +605,7 @@
                   </ul>
                 </li>
               </ul>
-            </ul>
+            </div>
           </div>
         </section>
         <!-- .category;; -->
